syntax = "proto3";

package user;

option go_package = "example/user;user";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {};
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUsersRequest {
  repeated string ids = 1;
}

message GetUsersResponse {
  repeated User users = 1;
}

message User {
  string id = 1;
  string name = 2;
}
