syntax = "proto3";

package post;

option go_package = "example/post;post";

service PostService {
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {};
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse) {};
  rpc GetPostMap(GetPostMapRequest) returns (GetPostMapResponse) {};
}

message GetPostRequest {
  string id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message GetPostsRequest {
  repeated string ids = 1;
}

message GetPostsResponse {
  repeated Post posts = 1;
}

message GetPostMapRequest {
  map<string, string> ids = 1;
}

message GetPostMapResponse {
  map<string, Post> posts = 1;
}

message Post {
  string id = 1;
  string title = 2;
  string content = 3;
  string user_id = 4;
}
